--- a/.env.example
+++ b/.env.example
@@ -5,17 +5,17 @@ DATABASE_URL=postgresql://user:password@localhost:5432/pulse
 REDIS_URL=redis://localhost:6379
 
 # Auth
-JWT_SECRET=
+JWT_SECRET=dev_jwt_secret_key_please_change_in_prod_123456
 JWT_EXPIRATION=15m
 JWT_REFRESH_EXPIRATION=7d
 
 # Google OAuth
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=dev_google_client_id
+GOOGLE_CLIENT_SECRET=dev_google_client_secret
 GOOGLE_CALLBACK_URL=http://localhost:3001/auth/google/callback
 
 # OpenAI
-OPENAI_API_KEY=
+OPENAI_API_KEY=sk-local-placeholder
 OPENAI_MODEL=gpt-4o-mini
 
 # App
