--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
 # Database
-DATABASE_URL=postgresql://user:password@localhost:5432/pulse
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/pulse
 
 # Redis
 REDIS_URL=redis://localhost:6379
 
 # Auth
 JWT_SECRET=dev_jwt_secret_key_please_change_in_prod_123456
+GOOGLE_TOKENS_ENCRYPTION_SECRET=
 JWT_EXPIRATION=15m
 JWT_REFRESH_EXPIRATION=7d
 
@@ -13,6 +14,7 @@ JWT_REFRESH_EXPIRATION=7d
 GOOGLE_CLIENT_ID=dev_google_client_id
 GOOGLE_CLIENT_SECRET=dev_google_client_secret
 GOOGLE_CALLBACK_URL=http://localhost:3001/auth/google/callback
+GOOGLE_GA4_PROPERTY_ID=
 
 # OpenAI
 OPENAI_API_KEY=sk-local-placeholder
@@ -22,6 +24,7 @@ OPENAI_MODEL=gpt-4o-mini
 NODE_ENV=development
 PORT=3001
 FRONTEND_URL=http://localhost:3000
+NEXT_PUBLIC_API_URL=http://localhost:3001
 
 # Storage
 CLOUDFLARE_R2_BUCKET=
