--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           node-version: 20
           cache: pnpm
       - run: pnpm install --frozen-lockfile=false
-      - run: pnpm --filter @pulse/backend test
+      - run: pnpm --filter @pulse/backend test:ci
 
   build:
     runs-on: ubuntu-latest
