--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,10 +7,11 @@
     "build": "nest build",
     "start": "node dist/main.js",
     "lint": "eslint \"src/**/*.ts\" --max-warnings 0",
-    "test": "jest --coverage",
+    "test": "jest --runInBand",
+    "test:ci": "jest --coverage",
     "typecheck": "tsc --noEmit",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev"
+    "prisma:generate": "sh -c 'set -a; . ../../.env; set +a; prisma generate'",
+    "prisma:migrate": "sh -c 'set -a; . ../../.env; set +a; prisma migrate dev'"
   },
   "dependencies": {
     "@pulse/shared": "workspace:*",
