--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "infra:down": "bash scripts/infra-down.sh",
     "infra:logs": "bash scripts/infra-logs.sh",
     "db:migrate": "pnpm --filter @pulse/backend prisma:migrate",
+    "db:deploy": "pnpm --filter @pulse/backend prisma:migrate:deploy",
     "db:migrate:init": "pnpm --filter @pulse/backend prisma:migrate -- --name init",
-    "dev": "turbo run dev --parallel --filter=@pulse/backend --filter=@pulse/frontend",
+    "dev": "bash scripts/dev.sh",
+    "dev:apps": "turbo run dev --parallel --filter=@pulse/backend --filter=@pulse/frontend",
     "dev:backend": "turbo run dev --filter=@pulse/backend",
     "dev:frontend": "turbo run dev --filter=@pulse/frontend",
     "build": "turbo run build",
