feat: Introduce an internal ops panel for backend health, metrics, and request logs, and add heuristic digest generation.

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ REDIS_URL=redis://localhost:6379
 
 # Auth
 JWT_SECRET=dev_jwt_secret_key_please_change_in_prod_123456
+OPS_PANEL_KEY=
 GOOGLE_TOKENS_ENCRYPTION_SECRET=
 JWT_EXPIRATION=15m
 JWT_REFRESH_EXPIRATION=7d
@@ -17,7 +18,8 @@ GOOGLE_CALLBACK_URL=http://localhost:3001/auth/google/callback
 GOOGLE_GA4_PROPERTY_ID=
 
 # OpenAI
-OPENAI_API_KEY=sk-local-placeholder
+# Optional in zero-cost mode (leave empty to use local heuristic digest)
+OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o-mini
 
 # App
