feat: implement workspace management with RBAC, add route rate limiting, and introduce auditing capabilities.

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ REDIS_URL=redis://localhost:6379
 JWT_SECRET=dev_jwt_secret_key_please_change_in_prod_123456
 OPS_PANEL_KEY=
 GOOGLE_TOKENS_ENCRYPTION_SECRET=
+GOOGLE_TOKENS_ENCRYPTION_SECRETS=
 JWT_EXPIRATION=15m
 JWT_REFRESH_EXPIRATION=7d
 
